# iai_perception

./: stack.xml
ias-cf/: README  stack.xml
ias-cf/ias-cf/: CMakeLists.txt  package.xml
ias-cf/ias_cf/: Makefile  stack.xml
ias-cf/ias_cf/icf_core/: CMakeLists.txt  manifest.xml
ias-cf/ias_cf/icf_core/data/: test.h5  vfh-complete-vosch.h5  vfh-test-vosch.h5
ias-cf/ias_cf/icf_core/include/icf_core/base/: ConfusionMatrix.hpp
ias-cf/ias_cf/icf_core/include/icf_core/classifiers/: KNNImpl.h  ObjectPartHash.h  SVMClassifier.h
ias-cf/ias_cf/icf_core/include/icf_core/client/: Ensemble.h
ias-cf/ias_cf/icf_core/include/icf_core/service/: ClassifierManager.h  knninst.h
ias-cf/ias_cf/icf_core/launch/: icf_service_node.launch
ias-cf/ias_cf/icf_core/src/base/: ClassificationResult.cpp  ConfusionMatrix.cpp
ias-cf/ias_cf/icf_core/src/classifiers/: BoostOAA.cpp  KNNClassifier.cpp  KNNImpl.cpp  ObjectPartHash.cpp  SVMClassifier.cpp
ias-cf/ias_cf/icf_core/src/client/: Client.cpp  Ensemble.cpp  SimpleRuleEnsemble.cpp
ias-cf/ias_cf/icf_core/src/service/: ClassifierManager.cpp  knninst.cpp
ias-cf/ias_cf/icf_core/src/tools/: build_classifier.cpp  upload_dataset.cpp
ias-cf/ias_cf/icf_core/srv/: BuildModel.srv  ExecuteService.srv  Free.srv  Load.srv  Save.srv  SetDataset.srv  TestData.srv
ias-cf/ias_cf/icf_core/test/classifiers/: BoostOAAClassifierTest.cpp
ias-cf/ias_cf/icf_dataset/: .CMakeLists.txt.swp  CMakeLists.txt  manifest.xml  temp.txt
ias-cf/ias_cf/icf_dataset/data/: test1.hdf5
ias-cf/ias_cf/icf_dataset/include/icf_dataset/: DataSet.hpp  ICFException.h  IOUtils.h
ias-cf/ias_cf/icf_dataset/scripts/: read_hdf5_octave.m
ias-cf/ias_cf/icf_feature_extraction/: manifest.xml
ias-cf/ias_cf/icf_feature_extraction/data/: README.txt
ias-cf/ias_cf/icf_feature_extraction/data/testing/1_obj050_mug3_green/: mug3_0150-ascii-normals.pcd
ias-cf/ias_cf/icf_feature_extraction/data/training/1_obj050_mug3_green/: mug3_0000-ascii-normals.pcd  mug3_0090-ascii-normals.pcd  mug3_0180-ascii-normals.pcd
ias-cf/ias_cf/icf_feature_extraction/data/training/2_obj037_cereals/: honey_bsss_cereal_0000-ascii-normals.pcd
ias-cf/ias_cf/icf_feature_extraction/example/: example_dataset.sh
ias-cf/ias_cf/icf_feature_extraction/include/icf_feature_extraction/: PCLoaders.hpp
ias-cf/ias_cf/icf_feature_extraction/src/: extract_bow_features.cpp
ias-cf/icf_core/: CMakeLists.txt  package.xml
ias-cf/icf_core/examples/: example_client.cpp  example_script.sh
ias-cf/icf_core/include/icf_core/base/: ClassificationResult.hpp  Classifier.hpp  EvaluationResult.hpp  ICFExceptionErrors.h  LabelMap.hpp
ias-cf/icf_core/include/icf_core/classifiers/: BoostOAA.h  KNNClassifier.h  ObjectPartHash.h
ias-cf/icf_core/include/icf_core/client/: Client.h  SimpleRuleEnsemble.h
ias-cf/icf_core/src/base/: EvaluationResult.cpp  LabelMap.cpp
ias-cf/icf_core/src/classifiers/: KNNClassifier.cpp  ObjectPartHash.cpp
ias-cf/icf_core/src/client/: Client.cpp
ias-cf/icf_core/src/service/: ClassifierManager.cpp  classifier_manager_node.cpp
ias-cf/icf_core/srv/: AddDataset.srv  Evaluate.srv  NewClassifier.srv  ReadDataset.srv  RemoveDataset.srv
ias-cf/icf_core/test/classifiers/: KNNClassifierTest.cpp  SVMClassifierTest.cpp
ias-cf/icf_core/test/client/: ClientTestBase.cpp
ias-cf/icf_dataset/: CMakeLists.txt  manifest.xml  package.xml
ias-cf/icf_dataset/scripts/: read_hdf5_matlab.sh
ias-cf/icf_dataset/src/: IOUtils.cpp  join_datasets.cpp
ias-cf/icf_dataset/test/: DataSetTests.cpp
ias-cf/icf_feature_extraction/: CMakeLists.txt  package.xml
ias-cf/icf_feature_extraction/data/testing/1_obj050_mug3_green/: mug3_0330-ascii-normals.pcd
ias-cf/icf_feature_extraction/data/testing/2_obj037_cereals/: honey_bsss_cereal_0060-ascii-normals.pcd  honey_bsss_cereal_0240-ascii-normals.pcd
ias-cf/icf_feature_extraction/data/training/2_obj037_cereals/: honey_bsss_cereal_0090-ascii-normals.pcd
ias-cf/icf_feature_extraction/include/icf_feature_extraction/: HierarchicalPCLoader.hpp  IMLoaders.hpp
ias-cf/icf_feature_extraction/src/: create_codebook.cpp  extract_features.cpp
ias-cf/icf_feature_extraction/test/: FeatureExtractionTests.cpp
object_hasher/: .project  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  table_scene_lms400_inliers.pcd  table_scene_lms400_outliers.pcd
object_hasher/data/: cloud_downsampled.pcd  rgbd_corrected_grsd.out  test.pcd
object_hasher/include/object_hasher/: ObjectGroup.h  ObjectPartDecomposition.hpp  point_type.h
object_hasher/include/object_hasher/pcl/: point_type.h  point_type.hpp
object_hasher/include/object_hasher/pcl/features/impl/: rsd.hpp
object_hasher/include/object_hasher/segmentation/: Segmentation.h  convexity_segmentation.h  curvature_euclidean_region_growing.h  euclidean_clustering_curvature.h
object_hasher/include/object_hasher/segmentation/impl/: convexity_segmentation.hpp  euclidean_clustering_curvature.hpp
object_hasher/src/: classify_scene_service.cpp  converter.cpp  convexity_segmentation.cpp  example_client.cpp  sor_test.cpp  test_scene_classification.cpp  test_voxelgrid.cpp
object_hasher/src/pcl/: rsd.cpp
object_hasher/src/segmentation/: convexity_segmentation.cpp  curvature_euclidean_region_growing.cpp  euclidean_clustering_curvature.cpp  test_segmentation.cpp
object_hasher/srv/: ClassifyScene.srv
oven_recognizer/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
oven_recognizer/src/: Center.hpp  Downsampler.hpp  Main.cpp  Segmentation.hpp  Shrinker.hpp
segment_small_objects/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml~  package.xml
segment_small_objects/src/: Binarization.hpp  Downsampler.hpp  Main.cpp  Segmentation.hpp  Segmentator.cpp  Shrinker.hpp  TimeMeasureMacro.h
