<?xml version="1.0"?>
<package>
  <name>object_hasher</name>
  <version>0.0.0</version>
  <description>The object_hasher package</description>

  <maintainer email="xxx@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/object_hasher</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>icf_core</build_depend>  
  <build_depend>message_generation</build_depend>
  <run_depend>icf_core</run_depend>  
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
