<?xml version="1.0"?>
<package>
  <name>oven_recognizer</name>
  <version>0.0.0</version>
  <description>The oven_recognizer package</description>

  <maintainer email="xxx@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/oven_recognizer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <export>
  </export>
</package>
