<?xml version="1.0"?>
<package>
  <name>segment_small_objects</name>
  <version>0.0.0</version>
  <description>The segment_small_objects package</description>

  <maintainer email="xxx@xxx.xx">Nico</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
