<?xml version="1.0"?>
<package>
  <name>ias_cf</name>
  <version>1.0.0</version>
  <description>
    The public IAS Classification Framework
  </description>

  <maintainer email="xxx@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
  <maintainer email="xxx@x.xx">Florian Seidel</maintainer>
  <maintainer email="xxx@x.xx">Zoltan-Csaba Marton</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ias_cf</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
