<?xml version="1.0"?>
<package>
  <name>icf_feature_extraction</name>
  <version>0.0.0</version>
  <description>
     The icf_feature_extraction package provides the tools for extracting features
     from data into the format needed by the ICF framework (using PCL and OpenCV).  
  </description>

  <maintainer email="xxx@cs.uni-bremen.de">Ferenc Balint-Benczedi</maintainer>
  <maintainer email="xxx@x.xx">Florian Seidel</maintainer>
  <maintainer email="xxx@x.xx">Zoltan-Csaba Marton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>icf_dataset</build_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>icf_dataset</run_depend>

  <export>
  </export>
</package>
